--- a/src/main/resources/com/hos/gui/Login.fxml
+++ b/src/main/resources/com/hos/gui/Login.fxml
@@ -37,8 +37,8 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField layoutX="299.0" layoutY="208.0" />
-            <TextField layoutX="299.0" layoutY="299.0" />
+            <TextField fx:id="UserName" layoutX="299.0" layoutY="208.0" />
+            <TextField fx:id="Password" layoutX="299.0" layoutY="299.0" />
             <Button fx:id="login" layoutX="372.0" layoutY="364.0" mnemonicParsing="false" onAction="#openOptionWindows" text="登录" />
          </children>
       </AnchorPane>
