--- a/src/main/resources/com/hos/gui/Main.fxml
+++ b/src/main/resources/com/hos/gui/Main.fxml
@@ -16,7 +16,7 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <Button fx:id="charge" layoutX="93.0" layoutY="119.0" mnemonicParsing="false" onAction="#openChargeWindows" prefHeight="43.0" prefWidth="100.0" text="挂号收费" />
+            <Button layoutX="93.0" layoutY="119.0" mnemonicParsing="false" onAction="#openChargeWindows" prefHeight="43.0" prefWidth="100.0" text="挂号收费" />
             <Button layoutX="408.0" layoutY="125.0" mnemonicParsing="false" onAction="#openPatienceWindows" prefHeight="43.0" prefWidth="100.0" text="看诊病例" />
             <Button layoutX="93.0" layoutY="248.0" mnemonicParsing="false" onAction="#openMedicineWindows" prefHeight="43.0" prefWidth="100.0" text="药房发药" />
             <Button fx:id="logout" layoutX="408.0" layoutY="248.0" mnemonicParsing="false" onAction="#logOut" prefHeight="43.0" prefWidth="100.0" text="退出登录" />
