--- a/src/main/resources/com/hos/gui/Medicine.fxml
+++ b/src/main/resources/com/hos/gui/Medicine.fxml
@@ -2,13 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
-
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="620.0" stylesheets="@UI.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -56,11 +53,6 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TableView fx:id="MedicineDetail" layoutX="14.0" layoutY="208.0" prefHeight="244.0" prefWidth="595.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="11.0">
-              <columns>
-                <TableColumn minWidth="600.0" prefWidth="-1.0" text="药品处方明细" />
-              </columns>
-            </TableView>
             <Button fx:id="Save" layoutX="508.0" layoutY="463.0" mnemonicParsing="false" text="发药" />
             <AnchorPane fx:id="Pane" layoutX="4.0" onMouseDragged="#onMouseDraggedForMove" onMousePressed="#onMousePressedForMove" prefHeight="52.0" prefWidth="612.0" style="-fx-background-color: gray;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
@@ -97,6 +89,8 @@
                   <Font size="14.0" />
                </font>
             </Label>
+            <TextField fx:id="MedicineDetail" layoutX="20.0" layoutY="204.0" prefHeight="258.0" prefWidth="592.0" />
+
          </children>
       </AnchorPane>
    </children>
