--- a/src/main/resources/com/hos/gui/Charge.fxml
+++ b/src/main/resources/com/hos/gui/Charge.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="900.0" stylesheets="@UI.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
@@ -144,7 +143,7 @@
             <ChoiceBox fx:id="Room" layoutX="78.0" layoutY="388.0" prefWidth="150.0" />
             <ChoiceBox fx:id="NumberInLine" layoutX="280.0" layoutY="389.0" prefWidth="150.0" />
             <ChoiceBox fx:id="Doctor" layoutX="522.0" layoutY="388.0" prefWidth="150.0" />
-            <Button fx:id="register" layoutX="691.0" layoutY="459.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="67.0" text="挂号" />
+            <Button fx:id="register" layoutX="691.0" layoutY="459.0" mnemonicParsing="false" onAction="#onRegisterButton" prefHeight="34.0" prefWidth="67.0" text="挂号" />
             <AnchorPane fx:id="Pane" layoutY="-6.0" onMouseDragged="#onMouseDraggedForMove" onMousePressed="#onMousePressedForMove" prefHeight="40.0" prefWidth="900.0" style="-fx-background-color: gray;">
                <children>
                   <Label layoutX="14.0" layoutY="2.0" prefHeight="40.0" prefWidth="90.0" text="挂号收费" textFill="#ff6161">
