--- a/src/main/resources/com/hos/gui/Patiences.fxml
+++ b/src/main/resources/com/hos/gui/Patiences.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="620.0" stylesheets="@UI.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
@@ -60,7 +59,7 @@
                </font>
             </Label>
             <TextField fx:id="PatienceNumber" layoutX="100.0" layoutY="97.0" />
-            <Button fx:id="Check" layoutX="322.0" layoutY="96.0" mnemonicParsing="false" text="查询" />
+            <Button fx:id="Check" layoutX="322.0" layoutY="96.0" mnemonicParsing="false" onAction="#onCheckButton" text="查询" />
             <Label layoutX="315.0" layoutY="282.0" prefHeight="28.0" prefWidth="71.0" text="看诊级别：" textFill="#8fa192">
                <font>
                   <Font size="14.0" />
@@ -94,7 +93,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button fx:id="Save" layoutX="497.0" layoutY="669.0" mnemonicParsing="false" text="保存" />
+            <Button fx:id="Save" layoutX="497.0" layoutY="669.0" mnemonicParsing="false" onAction="#onSaveButton" text="保存" />
             <AnchorPane fx:id="Pane" layoutX="-2.0" onMouseDragged="#onMouseDraggedForMove" onMousePressed="#onMousePressedForMove" prefHeight="50.0" prefWidth="620.0" style="-fx-background-color: gray;" AnchorPane.topAnchor="0.0">
                <children>
                   <Label layoutX="14.0" prefHeight="40.0" prefWidth="90.0" text="看诊病例" textFill="#ff6161">
