--- a/src/main/resources/com/hos/gui/Login.fxml
+++ b/src/main/resources/com/hos/gui/Login.fxml
@@ -40,6 +40,11 @@
             <TextField fx:id="UserName" layoutX="299.0" layoutY="208.0" />
             <TextField fx:id="Password" layoutX="299.0" layoutY="299.0" />
             <Button fx:id="login" layoutX="372.0" layoutY="364.0" mnemonicParsing="false" onAction="#openOptionWindows" text="登录" />
+            <Label fx:id="message" layoutX="345.0" layoutY="439.0" prefHeight="24.0" prefWidth="121.0" textFill="#8fa192">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
