--- a/src/main/resources/com/hos/gui/Login.fxml
+++ b/src/main/resources/com/hos/gui/Login.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
@@ -37,14 +38,14 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="UserName" layoutX="299.0" layoutY="208.0" />
-            <TextField fx:id="Password" layoutX="299.0" layoutY="299.0" />
+            <TextField fx:id="UserName" layoutX="293.0" layoutY="208.0" prefHeight="24.0" prefWidth="214.0" />
             <Button fx:id="login" layoutX="372.0" layoutY="364.0" mnemonicParsing="false" onAction="#openOptionWindows" text="登录" />
-            <Label fx:id="message" layoutX="345.0" layoutY="439.0" prefHeight="24.0" prefWidth="121.0" textFill="#8fa192">
+            <Label alignment="CENTER" layoutX="275.0" layoutY="430.0" prefHeight="15.0" prefWidth="250.0" text="账号或密码错误" textFill="#8fa192">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
+            <PasswordField fx:id="Password" layoutX="293.0" layoutY="299.0" prefHeight="32.0" prefWidth="214.0" />
          </children>
       </AnchorPane>
    </children>
