--- a/src/main/resources/com/hos/gui/Login.fxml
+++ b/src/main/resources/com/hos/gui/Login.fxml
@@ -40,7 +40,7 @@
             </Label>
             <TextField fx:id="UserName" layoutX="293.0" layoutY="208.0" prefHeight="24.0" prefWidth="214.0" />
             <Button fx:id="login" layoutX="372.0" layoutY="364.0" mnemonicParsing="false" onAction="#openOptionWindows" text="登录" />
-            <Label fx:id="message" alignment="CENTER" layoutX="275.0" layoutY="430.0" prefHeight="15.0" prefWidth="250.0" textFill="#8fa192">
+            <Label fx:id="message" alignment="TOP_CENTER" layoutX="265.0" layoutY="414.0" prefHeight="80.0" prefWidth="275.0" textFill="#8fa192" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font size="18.0" />
                </font>
