--- a/src/main/resources/com/hos/gui/Login.fxml
+++ b/src/main/resources/com/hos/gui/Login.fxml
@@ -39,13 +39,14 @@
                </font>
             </Label>
             <TextField fx:id="UserName" layoutX="293.0" layoutY="208.0" prefHeight="24.0" prefWidth="214.0" />
-            <Button fx:id="login" layoutX="372.0" layoutY="364.0" mnemonicParsing="false" onAction="#openOptionWindows" text="登录" />
+            <Button fx:id="login" layoutX="299.0" layoutY="364.0" mnemonicParsing="false" onAction="#openOptionWindows" prefHeight="34.0" prefWidth="63.0" text="登录" />
             <Label fx:id="message" alignment="TOP_CENTER" layoutX="142.0" layoutY="414.0" prefHeight="40.0" prefWidth="516.0" textFill="#8fa192" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
             <PasswordField fx:id="Password" layoutX="293.0" layoutY="299.0" prefHeight="32.0" prefWidth="214.0" />
+            <Button layoutX="437.0" layoutY="364.0" mnemonicParsing="false" onAction="#register" prefHeight="34.0" prefWidth="63.0" text="注册" />
          </children>
       </AnchorPane>
    </children>
