--- a/src/main/resources/com/hos/gui/Register.fxml
+++ b/src/main/resources/com/hos/gui/Register.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="553.0" prefWidth="764.0" stylesheets="@UI.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane prefHeight="391.0" prefWidth="621.0">
@@ -47,6 +46,11 @@
                </font>
             </Label>
             <PasswordField fx:id="RePassword" layoutX="305.0" layoutY="303.0" prefHeight="33.0" prefWidth="214.0" />
+            <Label fx:id="info" alignment="CENTER" layoutX="129.0" layoutY="426.0" prefHeight="24.0" prefWidth="563.0" textFill="#8fa192">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
