--- a/src/main/resources/com/hos/gui/Login.fxml
+++ b/src/main/resources/com/hos/gui/Login.fxml
@@ -21,7 +21,7 @@
                       <Button mnemonicParsing="false" onAction="#Close" text="关闭" />
                     </buttons>
                   </ButtonBar>
-                  <Label layoutX="247.0" layoutY="-2.0" prefHeight="32.0" prefWidth="307.0" text="欢迎登录东软云医院HIS系统" textFill="#ff6161" AnchorPane.topAnchor="-2.0">
+                  <Label layoutX="247.0" layoutY="-2.0" prefHeight="32.0" prefWidth="307.0" text="HIS医疗后台管理系统" textFill="#ff6161" AnchorPane.topAnchor="-2.0" >
                      <font>
                         <Font size="24.0" />
                      </font>
